@@ -11,6 +11,7 @@ Version 1.4.11 - SVN
     first comma.
   - Let POP3 class properly cope with lines starting with a '.'.
   - Some HTML validation cleanups.
+  - Invalid year in sent_subfolders plugin (#1607380).
 
 Version 1.4.10a - 10 May 2007
 -----------------------------
